--- a/Twitter_API.ipynb
+++ b/Twitter_API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,11 +21,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "api = tweepy.API(auth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ha, it works #success\n",
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "public_tweets = api.home_timeline()\n",
+    "for tweet in public_tweets:\n",
+    "    print(tweet.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user = api.get_user('twitter')"
    ]
   },
   {
@@ -37,14 +66,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test\n"
+      "Twitter\n",
+      "59082689\n"
      ]
     }
    ],
    "source": [
-    "public_tweets = api.home_timeline()\n",
-    "for tweet in public_tweets:\n",
-    "    print(tweet.text)"
+    "print(user.screen_name)\n",
+    "print(user.followers_count)\n",
+    "for friend in user.friends():\n",
+    "    print(friend.screen_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Twitter caps call rates at 300 per 15 min per app\n",
+    "MAX_TWEETS = 300\n",
+    "for tweet in tweepy.Cursor(api.search, q='GME', rpp=100).items(MAX_TWEETS):\n",
+    "    # Do something\n",
+    "    pass"
    ]
   },
   {
